# api-mapper

./: LICENSE  README.md  pyproject.toml  requirements.txt
apimapper/: cli.py
apimapper/agent/: reasoning.py
apimapper/core/: models.py  orchestrator.py  scope.py
apimapper/extractors/: apk_extractor.py  js_extractor.py
apimapper/probes/: active_probe.py  wordlist_probe.py
apimapper/reporting/: report.py
apimapper/wordlists/: common_api_paths.txt
docs/: USAGE.md
examples/: scope.example.yaml
tests/: test_js_extractor.py  test_scope.py  test_wordlist.py
